public/stylesheets/ui/documents.css
#document_list {
  position: relative;
  padding: 25px 27px 50px;
}
  body.minidocs #document_list {
    padding: 35px 0px 50px 20px;
  }

.document {
  position: relative;
}
  .document.muted {
    background: transparent;
  }
  #document_list .document {
    min-height: 80px;
    padding: 2px 30px 5px 90px;
    margin-bottom: 20px;
    font: 11px/14px Helvetica, Arial;
  }
    body.minidocs #document_list .document {
      float: left;
      min-height: 0;
      height: 44px; width: 165px;
      text-align: center;
      padding: 92px 10px 0 10px;
      margin: 0 20px 30px 0;
    }
    #document_list .document.owns_notes,
    #document_list .document.has_notes {
      min-height: 96px;
    }
  img.doc {
    cursor: pointer;
    background: #fff;
    position: absolute;
    width: 60px; height: 75px;
    padding: 1px;
    border: 1px solid #aaa;
    box-shadow: 2px 2px 0 #e0e0e0; -webkit-box-shadow: 2px 2px 0 #e0e0e0; -moz-box-shadow: 2px 2px 0 #e0e0e0;
  }
    body.minidocs #document_list .document img.doc {
      margin-left: 56px;
    }
  .document .mini_note {
    position: absolute;
    top: 13px; left: -3px;
    opacity: 0.85;
  }
    body.minidocs #document_list .document .mini_note {
      left: 53px;
    }
  .document .select {
    position: absolute;
    left: 0px; top: 0px;
    width: 70px; height: 85px;
    -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
  }
    body.minidocs #document_list .document .select {
      margin-left: 56px;
    }
    .document.is_selected .select {
      background: #09f;
    }
  .document img.doc {
    left: 3px; top: 3px;
  }
    .document.is_selected img.doc {
      border-color: transparent;
      box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none;
    }
  .document .title {
    display: block;
    color: #000;
    font: bold 16px/20px Helvetica, Arial;
    margin-bottom: 10px;
    min-height: 20px;
  }
    body.minidocs #document_list .document .title {
      font: bold 11px/14px Helvetica, Arial;
      overflow: hidden;
      min-height: 14px;
      max-height: 28px;
      margin-bottom: 0;
    }
    .document .doc_title {
      cursor: pointer;
    }
      .document .hoverable:hover .doc_title {
        text-decoration: underline;
      }
    .document .document_tool {
      display: inline;
      zoom: 1;
      cursor: pointer;
      width: 0; height: 18px;
      vertical-align: text-bottom;
      margin-left: 8px;
      line-height: 18px;
      padding-right: 16px;
    }
      .document .document_tool.lock:hover {
        background-position: center -28px;
      }
      .document .edit_glyph {
        display: inline;
        background-color: #fff;
        zoom: 1;
        visibility: hidden;
        cursor: pointer;
      }
        .document.is_editable:hover .edit_glyph,
        .note.is_editable:hover .edit_glyph {
          visibility: visible;
        }
        .document.pending_access:hover .edit_glyph {
          visibility: hidden;
        }
      body.minidocs #document_list .document .document_tool {
        position: absolute;
        top: 8px; left: 125px;
      }
      .document .document_tool.spinner {
        display: block;
        margin: 0; padding: 0;
        position: absolute;
        left: 27px; top: 50px;
        width: 16px;
      }
        body.minidocs #document_list .document .document_tool.spinner {
          top: 50px; left: 83px;
        }
  .document .metalines {
    font-size: 10px;
    margin-bottom: 4px;
    color: #999;
  }
    body.minidocs #document_list .document .metalines {
      display: none;
    }
  .document .description {
    font: 13px/18px Georgia;
    color: #555;
    margin-bottom: 3px;
  }
    body.minidocs #document_list .document .description {
      display: none;
    }
    .document .description > b {
      font-size: 12px;
    }
    .document.error_access .description {
      font-size: 11px;
      line-height: 16px;
      font-style: italic;
      color: #844;
    }
      .document.error_access .description .text_link {
        color: #000;
      }
  .document .show_notes {
    cursor: pointer;
    position: absolute;
    left: 7px; top: 90px;
    width: 60px;
    text-align: center;
  }
    body.minidocs #document_list .document .show_notes {
      position: static;
      display: inline-block;
      width: auto;
    }
    .document.has_notes .show_notes {
      text-align: left;
    }
    .document .show_notes .cancel_search {
      margin-right: 5px;
      vertical-align: text-top;
      display: none;
    }
      .document.has_notes .show_notes .cancel_search {
        display: inline-block;
      }

/*---------------------------- Page References -------------------------------*/
.document .pages {
}
  .document .page_list {
    position: relative;
    margin-right: -45px;
  }
.document .pages_header {
  position: relative;
  line-height: 18px;
  padding-left: 20px;
  margin: 20px 10px 15px 0;
}
  .document .page_list .pages_header {
    margin: 20px 10px 12px 0;
  }
  .document .pages_title {
    font-weight: bold;
    font-size: 13px;
    margin-right: 18px;
  }
    .document .page_list .pages_title {
      font-size: 11px;
      font-weight: normal;
      color: #555;
    }
    .document .pages_only {
      color: #000;
    }
  .document .pages .cancel_search {
    position: absolute;
    left: 0; top: 3px;
    cursor: pointer;
  }
  .document .arrow.left {
    margin-left: 10px;
  }
.document .page {
  padding-bottom: 15px;
}
  .document .page_list .page {
    float: left;
    height: 150px; width: 105px;
    padding-bottom: 0;
    margin: 0 20px 5px 0;
  }
  .document .page_icon {
    float: left;
    position: relative;
    text-align: center;
    margin-right: 20px;
    cursor: pointer;
  }
    .document .page_list .page_icon {
      margin-right: 0;
    }
    .document .page_icon .mini_note {
      left: -6px;
    }
    .document img.page_image {
      width: 40px; height: 50px;
      border: 1px solid #b4b4b4;
      box-shadow: 2px 2px 0 #e7e7e7; -webkit-box-shadow: 2px 2px 0 #e7e7e7; -moz-box-shadow: 2px 2px 0 #e7e7e7;
    }
    .document .page_list img.page_image {
      width: 90px; height: auto;
      min-height: 40px;
      max-height: 117px;
    }
    .document .page_number {
      color: #555;
    }
  .document .page_excerpt {
    font: 12px/18px Georgia;
    color: #555;
  }

/*------------------------------ Annotations ---------------------------------*/
.document .notes {
  display: none;
  padding-bottom: 5px;
}
  .document.has_notes .notes {
    display: block;
  }
  .note {
    position: relative;
    margin: 20px 0 0 0;
    padding: 10px;
    font: 12px/18px Helvetica, Arial;
    color: #555;
    border: 3px solid #ffe325;
    -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
    box-shadow: 1px 2px 3px #bbb; -webkit-box-shadow: 1px 2px 3px #bbb; -moz-box-shadow: 1px 2px 3px #bbb;
  }
    .note .edit, .note .display {
      display: none;
    }
      .note.display_visible .display,
      .note.edit_visible .edit {
        display: block;
      }
    .note .access_select {
      float: right;
    }
    .note .annotation_author {
      float: right;
      font-size: 11px;
      margin: 4px 0 0 0;
      color: #909090;
      display: none;
    }
    .note.not_editable .annotation_meta {
      display: none;
    }
    .note.is_editable .annotation_meta {
      display: block;
    }
    .note.exclusive_access {
      background: #fff url(/images/embed/ui/note-draft-bg.png) repeat 0 0;
    }
    .note .annotation_meta .annotation_access {
      float: left;
      margin: 4px 0 0 0;
      color: #909090;
      font-size: 11px;
    }
    .note.private_access {
      border-color: #6BC2F8;
    }
    .note .note_contents {
      position: relative;
      overflow: hidden;
    }
      .note .note_title {
        color: #000;
        font-weight: bold;
        margin-bottom: 10px;
        float: left;
        margin-right: 10px;
      }
        .note .title_link {
          cursor: pointer;
        }
      .note .note_title_edit {
        width: 300px;
        margin-bottom: 10px;
      }
        .note .note_title_input {
          background: #fff;
        }
      .note .page_number {
        color: #777;
        font-weight: normal;
        margin-left: 3px;
      }
      .note .note_text {
        color: #333;
        font: 13px/18px Georgia;
      }
      .note .note_text_edit_wrap {
        position: relative;
        margin-right: 14px;
      }
        .note .note_text_edit {
          height: 110px;
          width: 100%;
          font: 12px/18px Helvetica, Arial;
        }
      .note .note_excerpt_wrap {
        border: 1px solid #ccc;
        text-align: center;
        margin-bottom: 10px;
      }
        .note .note_excerpt {
          position: relative;
          margin: 0 auto;
          width: 750px;
          overflow: hidden;
        }
          .note .left_cover,
          .note .right_cover {
            position: absolute;
            z-index: 2;
            background: white;
            opacity: 0.68;
            filter: alpha(opacity=68);
          }
            .note .left_cover {
              left: 0;
              border-right: 1px solid #f1f1f1;
            }
            .note .right_cover {
              right: 0;
              border-left: 1px solid #f1f1f1;
            }
          .note .note_image {
            left: 0;
            position: absolute;
          }
      .note .lock {
        float: left;
        margin: 0 6px 0 0;
      }
      .note .edit_note {
        position: absolute;
        cursor: pointer;
        top: -1px; right: -1px;
        z-index: 2;
      }
      .note .note_controls {
        height: 36px;
      }
        .note .note_controls .minibutton {
          margin: 10px 0 0 0;
          width: 60px;
        }
          .note .note_controls .cancel_note,
          .note .note_controls .save_draft_note {
            margin-right: 10px;
          }
          .note.private_access .note_controls .save_draft_note {
            display: none;
          }
          .note .note_controls .save_draft_note {
            width: 80px;
          }

